RESOLVED FIXED276101
[iOS] Several editing-related layout tests are flaky on x86_64 simulator
https://bugs.webkit.org/show_bug.cgi?id=276101
Summary [iOS] Several editing-related layout tests are flaky on x86_64 simulator
Wenson Hsieh
Reported 2024-07-01 16:07:37 PDT
Attachments
Wenson Hsieh
Comment 1 2024-07-01 16:31:24 PDT
EWS
Comment 2 2024-07-01 18:39:37 PDT
Committed 280560@main (868193b30419): <https://commits.webkit.org/280560@main> Reviewed commits have been landed. Closing PR #30365 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.